# oracle-consumer

./: Anchor.toml
programs/oracle-consumer/: Cargo.toml
programs/oracle-consumer/src/: constants.rs  error.rs  event.rs  lib.rs  oracle.rs
programs/oracle-consumer/src/instructions/: initialize.rs
